<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.homescreen.HomeActivity" tools:layout_editor_absoluteY="81dp">

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/rvHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/titleSearchBox" tools:listitem="@layout/rvhome_layout"/>
        <ProgressBar
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titleSearchBox"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                android:layout_marginEnd="8dp" android:id="@+id/titleSearchBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_album" android:id="@+id/etSearch"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
                android:src="@drawable/ic_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btnSearch"
                android:contentDescription="@string/search_button"
                app:layout_constraintStart_toEndOf="@+id/titleSearchBox" android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>